--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,4 +3,4 @@ src/circl @armfazh
 src/crypto/tls @claucece @Lekensteyn
 src/crypto/x509 @wbl @cjpatton
 src/internal/cpu @armfazh
-src/net/http @Lekensteyn
+src/net @Lekensteyn @cjpatton
